[package]
name = "leptos-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = "0.28"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "Document", "Window"] }
leptos = { version = "0.5"}



